--- a/sdvx@asphyxia/.gitignore
+++ b/sdvx@asphyxia/.gitignore
@@ -3,6 +3,7 @@ webui/asset/audio
 webui/asset/chat_stamp
 webui/asset/difficulty
 webui/asset/force
+webui/asset/json
 webui/asset/logs
 webui/asset/nemsys
 webui/asset/skill_lv
