--- a/webui/asset/.gitignore
+++ b/webui/asset/.gitignore
@@ -1,7 +1,10 @@
 config
 ap_card
-chat_stamp
+arena_rank
 audio
+chat_stamp
+difficulty
 nemsys
-submonitor_bg
 skill_lv
+submonitor_bg
+valgene_item
